--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ https://templatemo.com/tm-543-breezed
                     <div class="right-text-content">
                         <p> I am interested in web development.
                         <br><br>Doing this to learn practical php and connecting form values to a database, I guess i'm going to use this to track my progress too and also talk about animes of course!
-                      <br><br></p>
+                      <br><br>Wanted to implement the link for that php and database in the 2nd slide termed "read more" couldn't implement it on github...</p>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="features-content">
                             <h4>IT interests</h4>
-                            <p>Interested in information security and blockchain development.</p>
+                            <p>Interested in information security and IoT development.</p>
                             <a href="#" class="text-button-icon">
                                 Learn More <i class="fa fa-arrow-right"></i>
                             </a>
