--- a/index.html
+++ b/index.html
@@ -309,32 +309,32 @@ https://templatemo.com/tm-543-breezed
                     <div class="row grid">
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all des">
                           <div class="item">
-                            <a href="assets/images/project-big-item-01.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-big-item-01.jpg" alt="" style="height: 7.5cm;"></a>
+                            <a href="assets/images/project-big-item-01.jpg" data-lightbox="image-1" data-title="Wallpapers"><img src="assets/images/project-big-item-01.jpg" alt="" style="height: 7.5cm;"></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all dev">
                           <div class="item">
-                            <a href="assets/images/project-big-item-02.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-big-item-02.jpg" alt="" style="height: 7.5cm;"></a>
+                            <a href="assets/images/project-big-item-02.jpg" data-lightbox="image-1" data-title="Wallpapers"><img src="assets/images/project-big-item-02.jpg" alt="" style="height: 7.5cm;"></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all gra">
                           <div class="item">
-                            <a href="assets/images/project-big-item-03.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-big-item-03.jpg" alt="" style="height: 7.5cm;"></a>
+                            <a href="assets/images/project-big-item-03.jpg" data-lightbox="image-1" data-title="Wallpapers"><img src="assets/images/project-big-item-03.jpg" alt="" style="height: 7.5cm;"></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all tsh">
                           <div class="item">
-                            <a href="assets/images/project-big-item-04.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-big-item-04.jpg" alt="" style="height: 7.5cm;"></a>
+                            <a href="assets/images/project-big-item-04.jpg" data-lightbox="image-1" data-title="Wallpapers"><img src="assets/images/project-big-item-04.jpg" alt="" style="height: 7.5cm;"></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all dev">
                           <div class="item">
-                            <a href="assets/images/project-big-item-05.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-big-item-05.jpg" alt="" style="height: 7.5cm;"></a>
+                            <a href="assets/images/project-big-item-05.jpg" data-lightbox="image-1" data-title="Wallpapers"><img src="assets/images/project-big-item-05.jpg" alt="" style="height: 7.5cm;"></a>
                           </div>
                         </div>
                         <div class="col-lg-4 col-md-4 col-sm-6 col-xs-12 all des">
                           <div class="item">
-                            <a href="assets/images/project-big-item-06.jpg" data-lightbox="image-1" data-title="Our Projects"><img src="assets/images/project-big-item-06.jpg" alt="" style="height: 7.5cm;"></a>
+                            <a href="assets/images/project-big-item-06.jpg" data-lightbox="image-1" data-title="Wallpaperx"><img src="assets/images/project-big-item-06.jpg" alt="" style="height: 7.5cm;"></a>
                           </div>
                         </div>
                     </div>
