--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ https://templatemo.com/tm-543-breezed
                     <div class="left-text-content">
                         <div class="section-heading">
                             <h6>About Us</h6>
-                            <h2>Just an anime fan doing what he likes</h2>
+                            <h2>"It doesn't matter who we are, what matters is our plan" -bane</h2>
                         </div>
                         <div class="row">
                             <div class="col-md-6 col-sm-6">
@@ -165,7 +165,7 @@ https://templatemo.com/tm-543-breezed
                             <div class="col-md-6 col-sm-6">
                                 <div class="service-item">
                                     <img src="assets/images/service-item-01.png" alt="">
-                                    <h4>cybersecurity</h4>
+                                    <h4>OS and Compilers</h4>
                                 </div>
                             </div>
                             <div class="col-md-6 col-sm-6">
@@ -177,7 +177,7 @@ https://templatemo.com/tm-543-breezed
                             <div class="col-md-6 col-sm-6">
                                 <div class="service-item">
                                     <img src="assets/images/contact-info-03.png" alt="">
-                                    <h4>IoT development</h4>
+                                    <h4>Quantum Computing</h4>
                                 </div>
                             </div>     
                             <div class="col-md-12">
@@ -190,9 +190,9 @@ https://templatemo.com/tm-543-breezed
                 </div>
                 <div class="col-lg-6 col-md-6 col-xs-12">
                     <div class="right-text-content">
-                        <p> I am interested in web development.
-                        <br><br>Doing this to learn practical php and connecting form values to a database, I guess i'm going to use this to track my progress too and also talk about animes of course!
-                      <br><br>Wanted to implement the link for that php and database in the 2nd slide termed "read more" couldn't implement it on github...</p>
+                        <p> I am NOT interested in web development hehe.
+                        <br><br>Doing this to learn more about backend dev and connecting form values to a database, I guess i'm going to use this to track my progress too!
+                      <br><br>Wanted to implement the link for that php and database in the 2nd slide termed "read more" couldn't implement it for now...</p>
                     </div>
                 </div>
             </div>
@@ -210,7 +210,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="features-content">
                             <h4>IT interests</h4>
-                            <p>Interested in information security and IoT development.</p>
+                            <p>Yokoso watashi no soul society ye.</p>
                             <a href="#" class="text-button-icon">
                                 Learn More <i class="fa fa-arrow-right"></i>
                             </a>
@@ -224,7 +224,7 @@ https://templatemo.com/tm-543-breezed
                         </div>
                         <div class="features-content">
                             <h4>Hobbies</h4>
-                            <p>Watching anime, watching movies, watching football, playing games.</p>
+                            <p>Go and ask your grandfather.</p>
                             <a href="#" class="text-button-icon">
                                 Learn More <i class="fa fa-arrow-right"></i>
                             </a>
@@ -237,8 +237,8 @@ https://templatemo.com/tm-543-breezed
                             <img src="assets/images/features-icon-1.png" alt="">
                         </div>
                         <div class="features-content">
-                            <h4>Information security</h4>
-                            <p>My favorites in the field are hackersploit and nahamsec, they help beginners like me alot by providing lots of free resources.</p>
+                            <h4>Operating Systems</h4>
+                            <p>Too hard to develop damn.</p>
                             <a href="#" class="text-button-icon">
                                 Learn More <i class="fa fa-arrow-right"></i>
                             </a>
